horizontal scroll and autoadjust fixed

--- a/src/app/gantt/gantt.component.css
+++ b/src/app/gantt/gantt.component.css
@@ -1,20 +1,12 @@
 @import 'dhtmlx-gantt/codebase/dhtmlxgantt.css';
 .gantt-chart{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    /* height: 600px; */
+    /* position: absolute; */
+    /* width: 100%; */
+    /* height: 100%; */
+    height: 84%
 }
 
-/* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-html, body{
-  height:100%;
-  padding:0px;
-  margin:0px;
-  overflow: hidden;
-  font-family: 'Poppins';
-}
+
 .gantt_tree_icon{
   display: flex;
   justify-content: center;
@@ -180,6 +172,7 @@ html, body{
     position: absolute;
     top: -7px;
     width: 100%;
+    height:100%;
     content: " ";
     height: 10px;
     background: transparent;
